--- a/model/train_model.ipynb
+++ b/model/train_model.ipynb
@@ -150,7 +150,7 @@
     "    monitor='val_accuracy',\n",
     "    patience=2,\n",
     "    mode='max',\n",
-    "    baseline=0.99,   # berhenti kalau sudah capai 99%\n",
+    "    baseline=0.99,   \n",
     "    restore_best_weights=True\n",
     ")\n",
     "\n",
