--- a/model/train_model.ipynb
+++ b/model/train_model.ipynb
@@ -2,50 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ec7243cc",
+   "execution_count": 3,
+   "id": "2d1f9e27",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ffe39cae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras import layers, models, callbacks\n",
-    "import pathlib"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "aafa7545",
-   "metadata": {},
-   "source": [
-    "Load Dataset"
+    "import pathlib\n",
+    "import os\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "59491543",
+   "execution_count": 6,
+   "id": "d53ae08c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = pathlib.Path(\"/content/drive/MyDrive/Main Project/KernellQ/Raw Dataset\")\n",
     "\n",
+    "# Path dataset lokal\n",
+    "base_dir = pathlib.Path(\"../raw_data\")\n",
     "batch_size = 32\n",
     "img_height = 150\n",
-    "img_width = 150\n",
+    "img_width = 150\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "73ae6018",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 810 files belonging to 3 classes.\n",
+      "Using 648 files for training.\n",
+      "Found 810 files belonging to 3 classes.\n",
+      "Using 162 files for validation.\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "train_ds = tf.keras.utils.image_dataset_from_directory(\n",
-    "    data_dir,\n",
+    "    base_dir,\n",
     "    validation_split=0.2,\n",
     "    subset=\"training\",\n",
     "    seed=123,\n",
@@ -54,61 +58,46 @@
     ")\n",
     "\n",
     "val_ds = tf.keras.utils.image_dataset_from_directory(\n",
-    "    data_dir,\n",
+    "    base_dir,\n",
     "    validation_split=0.2,\n",
     "    subset=\"validation\",\n",
     "    seed=123,\n",
     "    image_size=(img_height, img_width),\n",
     "    batch_size=batch_size\n",
-    ")\n",
-    "\n",
-    "# Preprocessing (normalisasi)\n",
-    "normalization_layer = layers.Rescaling(1./255)\n",
-    "train_ds = train_ds.map(lambda x, y: (normalization_layer(x), y))\n",
-    "val_ds   = val_ds.map(lambda x, y: (normalization_layer(x), y))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5cb7d0ff",
-   "metadata": {},
-   "source": [
-    "Data Augmentation"
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "76091ea8",
+   "execution_count": 8,
+   "id": "9802efde",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "normalization_layer = layers.Rescaling(1./255)\n",
+    "train_ds = train_ds.map(lambda x, y: (normalization_layer(x), y))\n",
+    "val_ds   = val_ds.map(lambda x, y: (normalization_layer(x), y))\n",
+    "\n",
     "data_augmentation = tf.keras.Sequential([\n",
     "    layers.RandomFlip(\"horizontal\"),\n",
     "    layers.RandomRotation(0.1),\n",
     "    layers.RandomZoom(0.1),\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "61756e59",
-   "metadata": {},
-   "source": [
-    "CNN Model"
+    "])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a6314664",
+   "execution_count": 9,
+   "id": "ead0c339",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "from tensorflow.keras import Input\n",
     "\n",
     "model = models.Sequential([\n",
-    "    Input(shape=(150, 150, 3)),   # <--- wajib untuk build model\n",
+    "    Input(shape=(150, 150, 3)),\n",
     "    data_augmentation,\n",
     "    layers.Conv2D(64, (3,3), activation='relu'),\n",
     "    layers.MaxPooling2D(2,2),\n",
@@ -126,172 +115,89 @@
     "    layers.Dense(1024, activation='relu'),\n",
     "    layers.Dropout(0.5),\n",
     "    layers.Dense(3, activation='softmax')\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d9dad89e",
-   "metadata": {},
-   "source": [
-    "Callback"
+    "])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "60d28f27",
+   "execution_count": 10,
+   "id": "5ff959be",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "early_stop = callbacks.EarlyStopping(monitor='val_accuracy', patience=5, restore_best_weights=True)\n",
     "\n",
     "target_acc = callbacks.EarlyStopping(\n",
     "    monitor='val_accuracy',\n",
     "    patience=2,\n",
     "    mode='max',\n",
-    "    baseline=0.99,   \n",
+    "    baseline=0.99,\n",
     "    restore_best_weights=True\n",
     ")\n",
     "\n",
-    "callbacks_list = [early_stop, target_acc]"
+    "callbacks_list = [early_stop, target_acc]\n",
+    "\n",
+    "model.compile(optimizer='adam',\n",
+    "              loss='sparse_categorical_crossentropy',\n",
+    "              metrics=['accuracy'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ef6475ce",
+   "execution_count": 11,
+   "id": "bbc2866e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/30\n",
+      "\u001b[1m21/21\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m71s\u001b[0m 3s/step - accuracy: 0.3657 - loss: 1.4652 - val_accuracy: 0.2593 - val_loss: 1.0920\n",
+      "Epoch 2/30\n",
+      "\u001b[1m21/21\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m45s\u001b[0m 2s/step - accuracy: 0.5015 - loss: 0.9079 - val_accuracy: 0.6667 - val_loss: 0.6663\n",
+      "Epoch 3/30\n",
+      "\u001b[1m21/21\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m46s\u001b[0m 2s/step - accuracy: 0.6420 - loss: 0.6772 - val_accuracy: 0.8025 - val_loss: 0.4829\n",
+      "Epoch 4/30\n",
+      "\u001b[1m21/21\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m46s\u001b[0m 2s/step - accuracy: 0.8272 - loss: 0.3970 - val_accuracy: 0.9506 - val_loss: 0.1112\n",
+      "Epoch 5/30\n",
+      "\u001b[1m21/21\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m53s\u001b[0m 2s/step - accuracy: 0.9336 - loss: 0.1695 - val_accuracy: 0.9815 - val_loss: 0.0454\n",
+      "Epoch 6/30\n",
+      "\u001b[1m21/21\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m49s\u001b[0m 2s/step - accuracy: 0.9151 - loss: 0.2024 - val_accuracy: 0.8395 - val_loss: 0.4203\n"
+     ]
+    }
+   ],
    "source": [
-    "model.compile(\n",
-    "    optimizer='adam',\n",
-    "    loss='sparse_categorical_crossentropy',   # <--- ganti ini\n",
-    "    metrics=['accuracy']\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "393b7a33",
-   "metadata": {},
-   "source": [
-    "Training"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "129baf88",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "history = model.fit(\n",
     "    train_ds,\n",
     "    validation_data=val_ds,\n",
     "    epochs=30,\n",
     "    callbacks=callbacks_list\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1639b8a6",
-   "metadata": {},
-   "source": [
-    "Visualisasi Training vs Validation Accuracy"
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bbc3ef10",
+   "execution_count": 15,
+   "id": "12bfc17d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Model berhasil disimpan ke: ..\\model\\model.keras\n"
+     ]
+    }
+   ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
     "\n",
-    "acc = history.history['accuracy']\n",
-    "val_acc = history.history['val_accuracy']\n",
-    "loss = history.history['loss']\n",
-    "val_loss = history.history['val_loss']\n",
-    "\n",
-    "plt.figure(figsize=(8,4))\n",
-    "plt.plot(acc, label='Training Accuracy')\n",
-    "plt.plot(val_acc, label='Validation Accuracy')\n",
-    "plt.legend()\n",
-    "plt.title('Training & Validation Accuracy')\n",
-    "plt.show()\n",
-    "\n",
-    "plt.figure(figsize=(8,4))\n",
-    "plt.plot(loss, label='Training Loss')\n",
-    "plt.plot(val_loss, label='Validation Loss')\n",
-    "plt.legend()\n",
-    "plt.title('Training & Validation Loss')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "820c191c",
-   "metadata": {},
-   "source": [
-    "Simpan Model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e8968b1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.save('/content/drive/MyDrive/Main Project/KernellQ/kernellq_cnn.h5')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1652a3ae",
-   "metadata": {},
-   "source": [
-    "Prediksi Gambar Baru"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d557ae6d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from tensorflow.keras.preprocessing import image\n",
-    "from google.colab import files\n",
-    "\n",
-    "train_ds_raw = tf.keras.utils.image_dataset_from_directory(\n",
-    "    \"/content/drive/MyDrive/Main Project/KernellQ/Raw Dataset\",\n",
-    "    image_size=(img_height, img_width),\n",
-    "    batch_size=batch_size\n",
-    ")\n",
-    "\n",
-    "class_names = train_ds_raw.class_names  \n",
-    "print(\"Kelas yang dikenali model:\", class_names)\n",
-    "\n",
-    "uploaded = files.upload()\n",
-    "\n",
-    "for filename in uploaded.keys():\n",
-    "    img_path = filename\n",
-    "    print(\"File yang dipilih:\", img_path)\n",
-    "\n",
-    "    img = image.load_img(img_path, target_size=(img_height, img_width))\n",
-    "    x = image.img_to_array(img)\n",
-    "    x = np.expand_dims(x, axis=0) / 255.0\n",
-    "\n",
-    "    pred = model.predict(x)\n",
-    "    predicted_class = class_names[np.argmax(pred)]\n",
-    "    confidence = round(np.max(pred), 4)\n",
-    "\n",
-    "    print(\"Prediksi:\", predicted_class, \"| Probabilitas:\", confidence)\n"
+    "output_model_path = pathlib.Path(\"../model/model.keras\")\n",
+    "os.makedirs(output_model_path.parent, exist_ok=True)\n",
+    "model.save(output_model_path)\n",
+    "print(f\"✅ Model berhasil disimpan ke: {output_model_path}\")\n"
    ]
   }
  ],
