Delete src fuzzy. Modified evaluation. Add model fuzzy.

--- a/model/evaluation.ipynb
+++ b/model/evaluation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f1065533",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "dd3dbfec",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
        "4           A          A  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "6f2435e3",
    "metadata": {},
    "outputs": [
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "f1a56bbf",
    "metadata": {},
    "outputs": [
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "c4563716",
    "metadata": {},
    "outputs": [
@@ -475,7 +475,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7037043b917e434283ac779d1b37e7bd",
+       "model_id": "392400c1ed904e0990bee2439f579680",
        "version_major": 2,
        "version_minor": 0
       },
@@ -489,7 +489,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9184237e5cb143cd8df2acc7228c4d8e",
+       "model_id": "c64bbbfd43b346ad93ffc64d0eaa8f4d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -578,18 +578,33 @@
     "\n",
     "            print(\"File:\", image_name)\n",
     "\n",
-    "            row = df[df[\"filename\"].astype(str).str.strip() == str(image_name).strip()]\n",
-    "            if row.empty:\n",
-    "                print(\"Gambar tidak ditemukan di dataset.\")\n",
-    "            else:\n",
-    "                true_grade = row.iloc[0][\"true_grade\"]\n",
-    "                pred_grade = row.iloc[0][\"pred_grade\"]\n",
-    "                grade_accuracy = 100 if str(true_grade).upper() == str(pred_grade).upper() else 0\n",
+    "            from predict_single import predict_single_image\n",
     "\n",
-    "                print(\"\\nHASIL ANALISIS GAMBAR\")\n",
-    "                print(\"Label Asli     :\", true_grade)\n",
-    "                print(\"Prediksi AI    :\", pred_grade)\n",
-    "                print(\"\\nAkurasi:\", grade_accuracy, \"%\")\n",
+    "            print(\"\\nMemproses gambar baru dengan pipeline DragonEye...\")\n",
+    "\n",
+    "            # Simpan file upload sementara untuk diproses oleh pipeline\n",
+    "            TEMP_DIR = r\"E:\\DragonEye\\temp\"\n",
+    "            os.makedirs(TEMP_DIR, exist_ok=True)\n",
+    "\n",
+    "            temp_path = os.path.join(TEMP_DIR, \"temp_uploaded_image.jpg\")\n",
+    "            with open(temp_path, \"wb\") as f:\n",
+    "                f.write(image_bytes)\n",
+    "            with open(temp_path, \"wb\") as f:\n",
+    "                f.write(image_bytes)\n",
+    "\n",
+    "            # Jalankan pipeline lengkap (preprocessing → segmentasi → fitur → fuzzy)\n",
+    "            result, err = predict_single_image(temp_path)\n",
+    "\n",
+    "            if err:\n",
+    "                print(\"Error:\", err)\n",
+    "            else:\n",
+    "                print(\"\\nHASIL ANALISIS GAMBAR (Pipeline Lengkap)\")\n",
+    "                print(\"Prediksi Grade :\", result[\"grade\"])\n",
+    "                print(\"Akurasi Fuzzy  :\", f\"{result['score']:.1f}%\")\n",
+    "                print(\"Panjang        :\", f\"{result['length']:.2f} cm\")\n",
+    "                print(\"Diameter       :\", f\"{result['diameter']:.2f} cm\")\n",
+    "                print(\"Berat Estimasi :\", f\"{result['weight']:.0f} g\")\n",
+    "                print(\"Rasio L/D      :\", f\"{result['ratio']:.2f}\")\n",
     "\n",
     "            _processed_once = True\n",
     "\n",
